Fixed test cmake files. Fixed List errors. Added more List tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.0)
 
-set(SIMPLE_CONTAINER_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src CACHE PATH "Path to src folder")
-set(SIMPLE_CONTAINER_TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/test  CACHE PATH "Path to test folder")
+set(SIMPLE_CONTAINER_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src   CACHE PATH "Path to src folder")
+set(SIMPLE_CONTAINER_TEST_DIR   ${CMAKE_CURRENT_SOURCE_DIR}/test  CACHE PATH "Path to test folder")
+
+set(SIMPLE_CONTAINER_ARCHIVE_OUTPUT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin CACHE PATH "Path to bin folder")
+set(SIMPLE_CONTAINER_LIBRARY_OUTPUT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin CACHE PATH "Path to bin folder")
+set(SIMPLE_CONTAINER_RUNTIME_OUTPUT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin CACHE PATH "Path to bin folder")
 
 add_subdirectory(src)
 add_subdirectory(test)
